Fixed header on small screen

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -33,7 +33,7 @@
       font-weight: bold;
     }
     &-item {
-      //   margin-left: 10px;
+      margin-left: 0px;
       margin-right: 10px;
     }
 
@@ -59,20 +59,29 @@
   .port-dropdown-item {
     color: white;
   }
-  .port-dropdown-toggle {
-    color: rgb(199, 199, 199);
-
-    &.active {
-      color: rgb(102, 102, 102);
-    }
+  &.active {
+    color: rgb(102, 102, 102);
   }
+}
+.port-dropdown-toggle {
+  color: rgb(199, 199, 199);
+  margin-left: 0px;
+  margin-right: 10px;
 }
 
 // --------- DEFAULT HEADER -------------
 .port-navbar.port-nav-base.port-nav-default {
   padding: 0.5rem !important;
-  // padding: 0.5rem 0 !important;
+
   // background-color: $secondary !important;
+}
+
+.bg-transparent.menu-open {
+  background-color: #2c3e50 !important;
+}
+
+.bg-transparent.menu-close {
+  transition: 1;
 }
 
 .shift {
